# uvperf

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.MD  README.md  log.c  script.sh  test.c  time.h  usbtest.py  usbtest_bulk.py  usbtest_iso.py  usbtest_iso_pyusb.py  uvperf.c  uvperf.h  uvperf_bulk.c  uvperf_bulk.py  uvperf_bulk_libusb.c  uvperf_bulk_pyusb.py  uvperf_iso_in.c  uvperf_iso_in.py  uvperf_simple.cc
include/: bench.h  benchmark.h  chrono_time.h  fileio.h  k.h  libusb.h  libusbk.h  log.h  logger.h  lusbk_linked_list.h  lusbk_version.h  param.h  setting.h  transfer.h  transfer_p.h  usb_descriptor.h  utils.h  uvperf.h
libusb/: libusb-1.0.pc
libusbk/: lusbk_version.h
linux/: .gitignore
linux/lib/: libusbK.lib
linux/src/: logger.cc  transfer.cc  uvperf.cc
log/: uvperf_log_20240712_145235.txt  uvperf_log_20240712_151112.txt  uvperf_log_20240712_161458.txt  uvperf_log_20240712_163933.txt  uvperf_log_20240712_164407.txt  uvperf_log_20240712_165521.txt  uvperf_log_20240712_170513.txt  uvperf_log_20240712_173409.txt
script/: CMakeCache.txt  Makefile  check_usb.ps1  cmake_install.cmake  uvperf_build.ps1  uvperf_exe.ps1
src/: ._logger.cc  bench.c  benchmark.c  fileio.c  find_usb.py  log.c  param.c  setting.c  time.cpp  transfer.c  transfer_p.c  usb_descriptor.c  utils.c  uvperf.c
